--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "react-cloudinary-img",
   "version": "0.0.1",
   "description": "A React component for rendering Cloudinary images",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "babel lib/index.jsx --out-file dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
