--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/JimmyMakesThings/react-cloudinary-img#readme",
   "dependencies": {
-    "cloudinary": "^1.2.2",
+    "cloudinary": "https://github.com/nickw/cloudinary_npm/archive/8b6e77124c54dcb2406a215d607879361e565c9c.tar.gz",
     "object-assign": "^3.0.0",
     "react": "^0.13.3"
   },
